# glyph

./: .gitignore  LICENSE  README.md  glpyh.py  plot.py  pyproject.toml  streamer.py  utils.py
src/glyph/: __init__.py  __main__.py  plot.py  streamer.py  utils.py
src/glyph/config/: __init__.py  default.css  defaults.json  model_config.json
src/glyph/data/: default_ultracortex_16.json
